path url swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.jpa.show-sql=true
 #Para insertar datos en las tablas, sino las tablas o existen para el
 spring.jpa.defer-datasource-initialization=true
 server.port=8080
+#Swagger api change default to /api-docs
+springdoc.api-docs.path=/api-docs
+
+#Same as 'localhost:8080/swagger-ui/index.html' but rediect
+springdoc.swagger-ui.path=/flow-ui.html
+
+
+springdoc.swagger-ui.operationsSorter=method
