--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+#Mostra per console el sql
 spring.jpa.show-sql=true
 #Para insertar datos en las tablas, sino las tablas o existen para el
 spring.jpa.defer-datasource-initialization=true
+#Utilitza aquest port 
 server.port=8080
 #Swagger api change default to /api-docs
 springdoc.api-docs.path=/api-docs
-
 #Same as 'localhost:8080/swagger-ui/index.html' but rediect
 springdoc.swagger-ui.path=/flow-ui.html
-
-
+#Ordena els metodes
 springdoc.swagger-ui.operationsSorter=method
